Small steps towards modularization
Thwarted attempt to modularize. Lingering problems are:
* MacAdapter in ij.jar is outside any package; needs to be forcibly removed (possible, but this then can confuse IDE error reports)
* packages declared multiple places within Bio-Formats dependencies